[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Item.tscn" type="PackedScene" id=2]
[ext_resource path="res://Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/light.png" type="Texture" id=5]
[ext_resource path="res://images/spot.png" type="Texture" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Foreground.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 20, 0, 0, 0, 0, 0, 345.91, -0.0486755, 0, 0, 0, 0, 572.871, 0, 0, 0, 0, 0, 20, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Item = ExtResource( 2 )
max_item_num = 20

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="Map" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -1 )

[node name="Sun" type="Light2D" parent="."]
position = Vector2( 510, -1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
shadow_enabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Sun"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 7 )]

[node name="Foreground" parent="." instance=ExtResource( 8 )]
layer = 10

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 90, 90 )

[node name="ItemPath" type="Path2D" parent="."]
position = Vector2( 280, 70 )
scale = Vector2( 2.02579, 1 )
curve = SubResource( 1 )

[node name="ItemSpawnLocation" type="PathFollow2D" parent="ItemPath"]
position = Vector2( 20, 0 )
rotation = -0.000149353

[node name="ItemSpawnTimer" type="Timer" parent="."]
wait_time = 0.8
[connection signal="timeout" from="ItemSpawnTimer" to="." method="_on_ItemSpawnTimer_timeout"]
